--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                         <p>Soy <strong>YerkoAndrei</strong>, desarrollador de videojuegos, programador backend, administrador de bases de datos y un montón de otras cosas.</p>
                         <p>Entusiasta y colaborador de código abierto.</p>
                         <p>.NET C# SQL Unity Stride WPF Avalonia</p>
-                        <p>Visual Studio DBeaver Blender Krita</p>
-                        <p>Miembro de <a href="https://umbrastudio2024.github.io">Umbra Studio</a></p>
+                        <p>VisualStudio DBeaver Blender Krita</p>
+                        <p>Miembro de <a href="https://umbrastudio2024.github.io"><strong>Umbra Studio</strong></a></p>
                     </td>
                 </tr>
             </table>
 
-            <h2>Visita mi <a href="https://github.com/YerkoAndrei">Github</a></h2>
+            <h2>Visita mi <a href="https://github.com/YerkoAndrei">GitHub</a></h2>
             <a href="https://github.com/YerkoAndrei"><img src="Docs/github-mark-white.png" height="100"></a>
             <p><br></p>
 
@@ -132,7 +132,7 @@
             <table style="width: 60%; text-align: left;">
                 <tr>
                     <td></td>
-                    <td><em>Desde los sueños.</em></td>
+                    <td><em>Desde los sueños</em></td>
                 </tr>
                 <tr>
                     <td>Videojuegos</td>
