--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--YerkoAndrei-->
 <!DOCTYPE html>
 <html lang="es-cl">
 <head>
@@ -17,7 +18,7 @@
             font-size: 20px;
         }
         table {
-            text-align: center;
+            text-align: justify;
             background-color: #0f0f0f;
             margin: 0px auto;
             border: 2px solid #141414;
@@ -42,6 +43,13 @@
             width: 60%;
             text-align: center;
             background-color: #141414;
+        }
+        .tablaGrande {
+            width: 80%;
+        }
+        .tablaChica {
+            width: 60%;
+            text-align: left;
         }
         .foto {
             height: 300px;
@@ -70,6 +78,9 @@
             .centro {
                 width: 100%;
             }
+            .tablaGrande, .tablaChica {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -93,59 +104,65 @@
 
             <h2>Visita mi <a href="https://github.com/YerkoAndrei">GitHub</a></h2>
             <a href="https://github.com/YerkoAndrei"><img src="Docs/github-mark-white.png" height="100"></a>
-            <p><br></p>
+            <br><br><br>
 
             <h3>Mis proyectos personales:</h3>
-            <table style="width: 80%;">
+            <table class="tablaGrande">
                 <tr>
-                    <td colspan="2" style="text-align: center;"><strong>Videojuegos</strong></td>
+                    <td colspan="2" style="text-align: center;"><h4>Videojuegos</h4></td>
                 </tr>
                 <tr>
-                    <td><img height="100" width="100" src="https://github.com/YerkoAndrei/SennalLocal/raw/main/Assets/Texturas/%C3%8Dcono.png"></td>
-                    <td>Señal local es un juego narrativo con múltiples opciones y muchos finales. Ayuda al Usuario de la línea de emergencia a escapar del peligro en el que despertó. O guíale a descubrir la verdad del porqué perdió la memoria.</td>
+                    <td colspan="2" style="text-align: center;"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1MTcwNDU5LnBuZw==/315x250%23c/vPV3Ls.png"></td>
                 </tr>
-                <tr>
-                    <td>Señal local</td>
-                    <td><a href="https://github.com/YerkoAndrei/SennalLocal">Código</a> y <a href="https://yerkoandrei.itch.io/local-signal">descarga</a> (Unity)</td>
-                </tr>
-                <tr style="height: 30px;"></tr>
-                <tr>
-                    <td><img height="100" width="100" src="https://camo.githubusercontent.com/ad7926d30404a14951f634e1460d7882c59c8dd9f6d4bc6b6592fe93d8954260/68747470733a2f2f696d672e697463682e7a6f6e652f6157316e4c7a45314d5463774e5449334c6e42755a773d3d2f6f726967696e616c2f37637178452532422e706e67"></td>
+                <tr> 
+                    <td width="100"><img height="100" width="100" src="https://camo.githubusercontent.com/ad7926d30404a14951f634e1460d7882c59c8dd9f6d4bc6b6592fe93d8954260/68747470733a2f2f696d672e697463682e7a6f6e652f6157316e4c7a45314d5463774e5449334c6e42755a773d3d2f6f726967696e616c2f37637178452532422e706e67" /></td>
                     <td>Terracota es un juego 1v1 de físicas en base a turnos, donde creas tus propias fortalezas y las pruebas en combate con tus habilidades con el cañón.</td>
                 </tr>
                 <tr>
-                    <td>Terracota</td>
-                    <td><a href="https://github.com/YerkoAndrei/Terracota">Código</a> y <a href="https://yerkoandrei.itch.io/terracota">descarga</a> (Stride)</td>
-                </tr>
-            </table>
-            <p><br></p>
-
-            <table style="width: 80%;">
-                <tr>
-                    <td colspan="2" style="text-align: center;"><strong>Utilidades</strong></td>
-                </tr>
-                <tr>
-                    <td><img height="100" width="100" src="https://github.com/YerkoAndrei/Choike/raw/ccfd2e85c7b23b45d42b8d23b7665ff930165802/Choike/Arte/SinCar%C3%A1tula.png"></td>
-                    <td>Choike es un reproductor de MP3 basado en carpetas, simple, rápido, de fondo oscuro, offline, y con algunas teclas personalizadas.</td>
-                </tr>
-                <tr>
-                    <td>Choike</td>
-                    <td><a href="https://github.com/YerkoAndrei/Choike">Código y descarga</a> (WPF)</td>
+                    <td style="text-align: center;">Terracota</td>
+                    <td colspan="2" style="text-align: center;"><a href="https://github.com/YerkoAndrei/Terracota">Código</a> y <a href="https://yerkoandrei.itch.io/terracota">descarga</a> (Stride)</td>
                 </tr>
                 <tr style="height: 30px;"></tr>
                 <tr>
-                    <td><img height="100" width="100" src="https://github.com/YerkoAndrei/NNuku/raw/main/NNuku.Android/Icon.png"></td>
+                    <td colspan="2" style="text-align: center;"><img height="250" width="315" src="https://img.itch.zone/aW1nLzEzNTM1OTE2LnBuZw==/315x250%23c/i52%2FNZ.png"></td>
+                </tr>
+                <tr> 
+                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/SennalLocal/raw/main/Assets/Texturas/%C3%8Dcono.png" /></td>
+                    <td>Señal local es un juego narrativo con múltiples opciones y muchos finales. Ayuda al Usuario de la línea de emergencia a escapar del peligro en el que despertó. O guíale a descubrir la verdad del porqué perdió la memoria.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Señal local</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/SennalLocal">Código</a> y <a href="https://yerkoandrei.itch.io/local-signal">descarga</a> (Unity)</td>
+                </tr>
+            </table>
+            <br><br>
+
+            <table class="tablaGrande">
+                <tr>
+                    <td colspan="2" style="text-align: center;"><h4>Utilidades</h4></td>
+                </tr>
+                <tr>
+                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/Choike/raw/ccfd2e85c7b23b45d42b8d23b7665ff930165802/Choike/Arte/SinCar%C3%A1tula.png"></td>
+                    <td>Choike es un reproductor de MP3 basado en carpetas, simple, rápido, de fondo oscuro, offline, y con algunas teclas personalizadas.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Choike</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/Choike">Código y descarga</a> (WPF)</td>
+                </tr>
+                <tr style="height: 30px;"></tr>
+                <tr>
+                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/NNuku/raw/main/NNuku.Android/Icon.png"></td>
                     <td>Ñuku es un diario de notas simple y oscuro para android.</td>
                 </tr>
                 <tr>
-                    <td>Ñuku</td>
-                    <td><a href="https://github.com/YerkoAndrei/NNuku">Código y descarga</a> (Avalonia)</td>
+                    <td style="text-align: center;">Ñuku</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/NNuku">Código y descarga</a> (Avalonia)</td>
                 </tr>
             </table>
-            <p><br></p>
+            <br><br>
 
             <h3>Mi creativo:</h3>
-            <table style="width: 60%; text-align: left;">
+            <table class="tablaChica">
                 <tr>
                     <td></td>
                     <td><em>Desde los sueños</em></td>
@@ -166,7 +183,7 @@
                     <td><a href="https://www.artstation.com/yerkoandrei">Artstation/YerkoAndrei</a></td>
                 </tr>
             </table>
-            <p><br></p>
+            <br><br>
 
             <h3>Contacto:</h3>
             <table style="width: 40%;">
@@ -182,9 +199,11 @@
             <img src="Docs/tresMundos.png" height="300" width="300">
             <br>
             <a>YerkoAndrei <script>document.write(/\d{4}/.exec(Date())[0])</script></a>
-            <p><br></p>
+            <br><br>
         </div>
         <div class="columna derecha">❤</div>
     </div>
 </body>
 </html>
+<!--( ͡° ͜ʖ ͡°)-->
+<!--︻デ┳═ー-->
