imagenes link y links otra pestaña

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                         <p>Entusiasta y colaborador de código abierto.</p>
                         <p>.NET C# SQL Unity Stride WPF Avalonia</p>
                         <p>VisualStudio DBeaver Blender Krita</p>
-                        <p>Miembro de <a href="https://umbrastudio2024.github.io"><strong>Umbra Studio</strong></a></p>
+                        <p>Miembro de <a href="https://umbrastudio2024.github.io" target="_blank"><strong>Umbra Studio</strong></a></p>
                     </td>
                 </tr>
             </table>
 
-            <h2>Visita mi <a href="https://github.com/YerkoAndrei">GitHub</a></h2>
-            <a href="https://github.com/YerkoAndrei"><img src="Docs/github-mark-white.png" height="100"></a>
+            <h2>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h2>
+            <a href="https://github.com/YerkoAndrei" target="_blank"><img src="Docs/github-mark-white.png" height="100"></a>
             <br><br><br>
 
             <h3>Mis proyectos personales:</h3>
@@ -112,7 +112,7 @@
                     <td colspan="2" style="text-align: center;"><h4>Videojuegos</h4></td>
                 </tr>
                 <tr>
-                    <td colspan="2" style="text-align: center;"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1MTcwNDU5LnBuZw==/315x250%23c/vPV3Ls.png"></td>
+                    <td colspan="2" style="text-align: center;"><a href="https://yerkoandrei.itch.io/terracota" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1MTcwNDU5LnBuZw==/315x250%23c/vPV3Ls.png" /></a></td>
                 </tr>
                 <tr> 
                     <td width="100"><img height="100" width="100" src="https://camo.githubusercontent.com/ad7926d30404a14951f634e1460d7882c59c8dd9f6d4bc6b6592fe93d8954260/68747470733a2f2f696d672e697463682e7a6f6e652f6157316e4c7a45314d5463774e5449334c6e42755a773d3d2f6f726967696e616c2f37637178452532422e706e67" /></td>
@@ -120,11 +120,11 @@
                 </tr>
                 <tr>
                     <td style="text-align: center;">Terracota</td>
-                    <td colspan="2" style="text-align: center;"><a href="https://github.com/YerkoAndrei/Terracota">Código</a> y <a href="https://yerkoandrei.itch.io/terracota">descarga</a> (Stride)</td>
+                    <td colspan="2" style="text-align: center;"><a href="https://github.com/YerkoAndrei/Terracota" target="_blank">Código</a> y <a href="https://yerkoandrei.itch.io/terracota" target="_blank">descarga</a> (Stride)</td>
                 </tr>
                 <tr style="height: 30px;"></tr>
                 <tr>
-                    <td colspan="2" style="text-align: center;"><img height="250" width="315" src="https://img.itch.zone/aW1nLzEzNTM1OTE2LnBuZw==/315x250%23c/i52%2FNZ.png"></td>
+                    <td colspan="2" style="text-align: center;"><a href="https://yerkoandrei.itch.io/local-signal" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzEzNTM1OTE2LnBuZw==/315x250%23c/i52%2FNZ.png" /></a></td>
                 </tr>
                 <tr> 
                     <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/SennalLocal/raw/main/Assets/Texturas/%C3%8Dcono.png" /></td>
@@ -132,7 +132,7 @@
                 </tr>
                 <tr>
                     <td style="text-align: center;">Señal local</td>
-                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/SennalLocal">Código</a> y <a href="https://yerkoandrei.itch.io/local-signal">descarga</a> (Unity)</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/SennalLocal" target="_blank">Código</a> y <a href="https://yerkoandrei.itch.io/local-signal" target="_blank">descarga</a> (Unity)</td>
                 </tr>
             </table>
             <br><br>
@@ -147,7 +147,7 @@
                 </tr>
                 <tr>
                     <td style="text-align: center;">Choike</td>
-                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/Choike">Código y descarga</a> (WPF)</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/Choike" target="_blank">Código y descarga</a> (WPF)</td>
                 </tr>
                 <tr style="height: 30px;"></tr>
                 <tr>
@@ -156,7 +156,7 @@
                 </tr>
                 <tr>
                     <td style="text-align: center;">Ñuku</td>
-                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/NNuku">Código y descarga</a> (Avalonia)</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/NNuku" target="_blank">Código y descarga</a> (Avalonia)</td>
                 </tr>
             </table>
             <br><br>
@@ -169,18 +169,18 @@
                 </tr>
                 <tr>
                     <td>Videojuegos</td>
-                    <td><a href="https://yerkoandrei.itch.io/">Itch.io/YerkoAndrei</a></td>
+                    <td><a href="https://yerkoandrei.itch.io/" target="_blank">Itch.io/YerkoAndrei</a></td>
                 </tr>
                 <tr>
                     <td>Código</td>
-                    <td><a href="https://github.com/YerkoAndrei">Github/YerkoAndrei</a></td>
+                    <td><a href="https://github.com/YerkoAndrei" target="_blank">Github/YerkoAndrei</a></td>
                 </tr><tr>
                     <td>Cuentos de terror</td>
-                    <td><a href="https://www.wattpad.com/user/YerkoAndrei">Wattpad/YerkoAndrei</a></td>
+                    <td><a href="https://www.wattpad.com/user/YerkoAndrei" target="_blank">Wattpad/YerkoAndrei</a></td>
                 </tr>
                 <tr>
                     <td>Ilustraciones</td>
-                    <td><a href="https://www.artstation.com/yerkoandrei">Artstation/YerkoAndrei</a></td>
+                    <td><a href="https://www.artstation.com/yerkoandrei" target="_blank">Artstation/YerkoAndrei</a></td>
                 </tr>
             </table>
             <br><br>
