agregados proyectos con umbra

--- a/index.html
+++ b/index.html
@@ -102,15 +102,12 @@
                 </tr>
             </table>
 
-            <h2>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h2>
+            <h3>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h3>
             <a href="https://github.com/YerkoAndrei" target="_blank"><img src="Docs/github-mark-white.png" height="100"></a>
             <br><br><br>
 
-            <h3>Mis proyectos personales:</h3>
+            <h2>Mis Videojuegos:</h2>
             <table class="tablaGrande">
-                <tr>
-                    <td colspan="2" style="text-align: center;"><h4>Videojuegos</h4></td>
-                </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;"><a href="https://yerkoandrei.itch.io/terracota" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1MTcwNDU5LnBuZw==/315x250%23c/vPV3Ls.png" /></a></td>
                 </tr>
@@ -137,10 +134,36 @@
             </table>
             <br><br>
 
+            <h2>Mis proyectos con Umbra:</h2>
             <table class="tablaGrande">
                 <tr>
-                    <td colspan="2" style="text-align: center;"><h4>Utilidades</h4></td>
+                    <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE3NDk4MzU4LmdpZg==/315x250%23c/W%2F99mh.gif" /></a></td>
                 </tr>
+                <tr> 
+                    <td width="100"><img height="100" width="100" src="Docs/íconoJanitorOfLove.png" /></td>
+                    <td>Janitor of Love es un videojuego erótico de voyerismo. Un simulador de conserje donde puedes espiar a residentes universitarias y establecer relaciones con ellas.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Janitor of Love</td>
+                    <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank">Descarga</a> y <a href="https://www.patreon.com/UmbraErotica" target="_blank">Patreon</a> (Unity)</td>
+                </tr>
+                <tr style="height: 30px;"></tr>
+                <tr>
+                    <td colspan="2" style="text-align: center;"><a href="https://umbrastudio2024.github.io/DoctorCompleto/index.html" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1NjkzODUyLnBuZw==/315x250%23c/dtzPjt.png" /></a></td>
+                </tr>
+                <tr> 
+                    <td width="100"><img height="100" width="100" src="Docs/íconoDrCompleto.png" /></td>
+                    <td>Doctor Completo es un videojuego de gestión y habilidad que te sumerge en el apasionante mundo de la preparación de completos para satisfacer a tus exigentes clientes.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Doctor completo</td>
+                    <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.Umbra.DoctorCompleto" target="_blank">Descarga</a> y <a href="https://umbrastudio2024.github.io/DoctorCompleto/index.html" target="_blank">Web</a> (Unity)</td>
+                </tr>
+            </table>
+            <br><br>
+
+            <h2>Mis utilidades:</h2>
+            <table class="tablaGrande">
                 <tr>
                     <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/Choike/raw/ccfd2e85c7b23b45d42b8d23b7665ff930165802/Choike/Arte/SinCar%C3%A1tula.png"></td>
                     <td>Choike es un reproductor de MP3 basado en carpetas, simple, rápido, de fondo oscuro, offline, y con algunas teclas personalizadas.</td>
@@ -206,4 +229,3 @@
 </body>
 </html>
 <!--( ͡° ͜ʖ ͡°)-->
-<!--︻デ┳═ー-->
