--- a/index.html
+++ b/index.html
@@ -102,8 +102,18 @@
                 </tr>
             </table>
 
-            <h3>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h3>
-            <a href="https://github.com/YerkoAndrei" target="_blank"><img src="Docs/github-mark-white.png" height="100"></a>
+            <table class="tablaGrande">
+                <tr style="text-align: center;">
+                    <td>
+                        <h3>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h3>
+                        <a href="https://github.com/YerkoAndrei" target="_blank"><img src="Docs/github-mark-white.png" height="100"></a>
+                    </td>
+                    <td>
+                        <h3>Visita mi <a href="https://yerkoandrei.itch.io" target="_blank">Itch.io</a></h3>
+                        <a href="https://yerkoandrei.itch.io" target="_blank"><img src="https://static.itch.io/images/itchio-textless-white.svg" height="100"></a>
+                    </td>
+                </tr>
+            </table>
             <br><br><br>
 
             <h2>Mis Videojuegos:</h2>
@@ -112,7 +122,7 @@
                     <td colspan="2" style="text-align: center;"><a href="https://yerkoandrei.itch.io/terracota" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1MTcwNDU5LnBuZw==/315x250%23c/vPV3Ls.png" /></a></td>
                 </tr>
                 <tr> 
-                    <td width="100"><img height="100" width="100" src="https://camo.githubusercontent.com/ad7926d30404a14951f634e1460d7882c59c8dd9f6d4bc6b6592fe93d8954260/68747470733a2f2f696d672e697463682e7a6f6e652f6157316e4c7a45314d5463774e5449334c6e42755a773d3d2f6f726967696e616c2f37637178452532422e706e67" /></td>
+                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/Terracota/blob/543c27f3c0d7228f920c56d45716e1e1f38c780a/Promocionales/%C3%8Dcono.png?raw=true" /></td>
                     <td>Terracota es un juego 1v1 de físicas en base a turnos, donde creas tus propias fortalezas y las pruebas en combate con tus habilidades con el cañón.</td>
                 </tr>
                 <tr>
