--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </tr>
             </table>
 
-            <table class="tablaGrande">
+            <table class="tablaGrande" style="background-color: transparent;">
                 <tr style="text-align: center;">
                     <td>
                         <h3>Visita mi <a href="https://github.com/YerkoAndrei" target="_blank">GitHub</a></h3>
