--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h2>Mis proyectos con Umbra:</h2>
             <table class="tablaGrande">
                 <tr>
-                    <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE3NDk4MzU4LmdpZg==/315x250%23c/W%2F99mh.gif" /></a></td>
+                    <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE4MTM1Nzc3LmdpZg==/105x83%23/Mvcw3H.gif" /></a></td>
                 </tr>
                 <tr> 
                     <td width="100"><img height="100" width="100" src="Docs/íconoJanitorOfLove.png" /></td>
