--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <td>
                         <p>Soy <strong>YerkoAndrei</strong>, desarrollador de videojuegos, programador backend, administrador de bases de datos y un montón de otras cosas.</p>
                         <p>Entusiasta y colaborador de código abierto.</p>
-                        <p>.NET C# SQL Unity Stride WPF Avalonia</p>
-                        <p>VisualStudio DBeaver Blender Krita</p>
+                        <p>.NET C# SQL Unity Stride Avalonia WPF</p>
+                        <p>VSCode DBeaver Blender Krita</p>
                         <p>Miembro de <a href="https://umbrastudio2024.github.io" target="_blank"><strong>Umbra Studio</strong></a></p>
                     </td>
                 </tr>
@@ -142,7 +142,7 @@
                     <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/SennalLocal" target="_blank">Código</a> y <a href="https://yerkoandrei.itch.io/local-signal" target="_blank">descarga</a> (Unity)</td>
                 </tr>
             </table>
-            <br><br>
+            <br><br><br>
 
             <h2>Mis proyectos con Umbra:</h2>
             <table class="tablaGrande">
@@ -170,19 +170,10 @@
                     <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.Umbra.DoctorCompleto" target="_blank">Descarga</a> y <a href="https://umbrastudio2024.github.io/DoctorCompleto/index.html" target="_blank">Web</a> (Unity)</td>
                 </tr>
             </table>
-            <br><br>
+            <br><br><br>
 
             <h2>Mis utilidades:</h2>
             <table class="tablaGrande">
-                <tr>
-                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/Choike/raw/ccfd2e85c7b23b45d42b8d23b7665ff930165802/Choike/Arte/SinCar%C3%A1tula.png"></td>
-                    <td>Choike es un reproductor de MP3 basado en carpetas, simple, rápido, de fondo oscuro, offline, y con algunas teclas personalizadas.</td>
-                </tr>
-                <tr>
-                    <td style="text-align: center;">Choike</td>
-                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/Choike" target="_blank">Código y descarga</a> (WPF)</td>
-                </tr>
-                <tr style="height: 30px;"></tr>
                 <tr>
                     <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/NNuku/raw/main/NNuku.Android/Icon.png"></td>
                     <td>Ñuku es un diario de notas simple y oscuro para android.</td>
@@ -191,8 +182,17 @@
                     <td style="text-align: center;">Ñuku</td>
                     <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/NNuku" target="_blank">Código y descarga</a> (Avalonia)</td>
                 </tr>
+                <tr style="height: 30px;"></tr>
+                <tr>
+                    <td width="100"><img height="100" width="100" src="https://github.com/YerkoAndrei/Choike/raw/ccfd2e85c7b23b45d42b8d23b7665ff930165802/Choike/Arte/SinCar%C3%A1tula.png"></td>
+                    <td>Choike es un reproductor de MP3 basado en carpetas, simple, rápido, de fondo oscuro, offline, y con algunas teclas personalizadas.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Choike</td>
+                    <td style="text-align: center;"><a href="https://github.com/YerkoAndrei/Choike" target="_blank">Código y descarga</a> (WPF)</td>
+                </tr>
             </table>
-            <br><br>
+            <br><br><br>
 
             <h3>Mi creativo:</h3>
             <table class="tablaChica">
@@ -231,8 +231,10 @@
 
             <img src="Docs/tresMundos.png" height="300" width="300">
             <br>
-            <a>YerkoAndrei <script>document.write(/\d{4}/.exec(Date())[0])</script></a>
-            <br><br>
+            <footer>
+                <a>YerkoAndrei <script>document.write(/\d{4}/.exec(Date())[0])</script></a>
+            </footer>
+            <br>
         </div>
         <div class="columna derecha">❤</div>
     </div>
