--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             }
         }
     </style>
+    <script>
+        function QuitarCensura()
+        {
+            document.getElementById('botónCensura').style.visibility = 'collapse';
+            document.querySelectorAll('.censurable').forEach(elemento => {
+                elemento.style.visibility = 'visible';
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="fila">
@@ -146,18 +155,24 @@
 
             <h2>Mis proyectos con Umbra:</h2>
             <table class="tablaGrande">
-                <tr>
+                <tr id="botónCensura" style="visibility: visible;">
+                    <td colspan="2" style="height: 60px;">
+                        <button style="background: #640000; width: 100%; height: 100%; font-size: larger; font-weight: bold;" onclick="QuitarCensura()">+18</button>
+                    </td>
+                </tr>
+
+                <tr class="censurable" style="visibility: collapse;">
                     <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank"><img height="250" width="315" src="Docs/portadaConserje.png" /></a></td>
                 </tr>
-                <tr> 
+                <tr class="censurable" style="visibility: collapse;"> 
                     <td width="100"><img height="100" width="100" src="Docs/íconoJanitorOfLove.png" /></td>
                     <td>Janitor of Love es un videojuego erótico de voyerismo. Un simulador de conserje donde puedes espiar a residentes universitarias y establecer relaciones con ellas.</td>
                 </tr>
-                <tr>
+                <tr class="censurable" style="visibility: collapse;">
                     <td style="text-align: center;">Janitor of Love</td>
                     <td colspan="2" style="text-align: center;"><a href="https://umbraerotica.itch.io/janitor-of-love" target="_blank">Descarga</a> y <a href="https://www.patreon.com/UmbraErotica" target="_blank">Patreon</a> (Unity)</td>
                 </tr>
-                <tr style="height: 30px;"></tr>
+                <tr class="censurable" style="visibility: collapse; height: 30px;"></tr>
                 <tr>
                     <td colspan="2" style="text-align: center;"><a href="https://umbrastudio2024.github.io/DoctorCompleto/index.html" target="_blank"><img height="250" width="315" src="https://img.itch.zone/aW1nLzE1NjkzODUyLnBuZw==/315x250%23c/dtzPjt.png" /></a></td>
                 </tr>
